--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ html, body, h1, p, ul, li {
 }
 .container {
   width: 959px;
-  margin: 15vh auto;
+  height: 700px;
+  margin: 15vh auto 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,6 +35,8 @@ html, body, h1, p, ul, li {
 
 .column {
   display: flex;
+  width: 363px;
+  justify-content: space-between;
 }
 
 .letter {
@@ -46,9 +49,11 @@ html, body, h1, p, ul, li {
 }
 
 .field {
-  width: 325px;
-  height: 325px;
-  border: 3px solid #37259d;
+  position: relative;
+  width: 330px;
+  height: 330px;
+  border: 4px solid #37259d;
+  box-sizing: border-box;
 }
 
 .instruction {
@@ -68,33 +73,31 @@ html, body, h1, p, ul, li {
   margin-top: 31px;
 }
 
-.ship, .icon-field, .btn-play {
-  background: url('img/sprite.png') no-repeat;
-}
+/*.ship, .icon-field, .btn-play {*/
+/*  background: url('img/sprite.png') no-repeat;*/
+/*}*/
 
 .ship {
-  height: 35px;
+  height: 33px;
   position: absolute;
+  border: 2px solid #37259d;
+  box-sizing: border-box;
 }
 
 .fourdeck {
-  width: 134px;
-  background-position: 0 0;
+  width: 132px;
 }
 
 .tripledeck {
-  width: 101px;
-  background-position: -150px 0;
+  width: 99px;
 }
 
 .doubledeck {
-  width: 68px;
-  background-position: -270px 0;
+  width: 66px;
 }
 
 .singledeck {
-  width: 35px;
-  background-position: -360px 0;
+  width: 33px;
 }
 .initial-ships .ship {
   left: 0;
@@ -122,4 +125,10 @@ html, body, h1, p, ul, li {
 }
 .initial-ships .singledeck4 {
   left: 197px;
+}
+
+/* стиль для вертикального положения корабля */
+.vertical {
+  transform: rotate(90deg);
+  transform-origin: 16.5px 16.5px;
 }
