--- a/style.css
+++ b/style.css
@@ -132,3 +132,16 @@ html, body, h1, p, ul, li {
   transform: rotate(90deg);
   transform-origin: 16.5px 16.5px;
 }
+
+.information {
+  margin-top: 61px;
+}
+
+.btn-play {
+  background: white;
+  height: 45px;
+  width: 123px;
+  border: 3px solid #37259d;
+  color: #37259d;
+  font-size: 25px;
+}
